--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,4 +29,55 @@
   	<servlet-name>MemberFrontController</servlet-name>
   	<url-pattern>*.member</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+  	<servlet-name>BusinessFrontController</servlet-name>
+  	<servlet-class>com.app.business.BusinessFrontController</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>BusinessFrontController</servlet-name>
+  	<url-pattern>*.business</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+  	<servlet-name>CommunityPostFrontController</servlet-name>
+  	<servlet-class>com.app.community.CommunityPostFrontController</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>CommunityPostFrontController</servlet-name>
+  	<url-pattern>*.community</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+  	<servlet-name>PetFrontController</servlet-name>
+  	<servlet-class>com.app.pet.PetFrontController</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>PetFrontController</servlet-name>
+  	<url-pattern>*.pet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+  	<servlet-name>AdminFrontController</servlet-name>
+  	<servlet-class>com.app.admin.AdminFrontController</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>AdminFrontController</servlet-name>
+  	<url-pattern>*.admin</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+  	<servlet-name>SellerFrontController</servlet-name>
+  	<servlet-class>com.app.seller.SellerFrontController</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>SellerFrontController</servlet-name>
+  	<url-pattern>*.seller</url-pattern>
+  </servlet-mapping>
+  
+  
 </web-app>
